# synapse-playwright-poc

./: .gitignore  login_success.html  mock_login.html  mock_website.html  playwright_login_poc.py  playwright_poc.py  pyproject.toml  strix-mockup-new.html
